# monowrap

./: .gitignore  Cargo.toml  LICENSE  README.md  jest.config.js  package.json  polywrap.build.yaml  polywrap.test.yaml
scripts/: manifest-gen.ts
src/: arg_parse.rs  execute.rs  graph.rs  job.rs  lib.rs  logger.rs  manifest.rs  schema.graphql
src/__tests__/e2e/: integration.spec.ts
src/__tests__/types/: polywrap.app.yaml  schema.graphql
src/schemas/: manifest.example.json  manifest.example.yaml  manifest.graphql  manifest.json
workflows/: validator.cue
